--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/node": "^20.8.6"
   },
   "jest-junit": {
-    "suiteName": "jest tests",
+    "suiteName": "test tests",
     "outputDirectory": "jest-results",
     "outputName": "junit.xml",
     "uniqueOutputName": "false",
